
# CSS

executable('tokenizer_chunks', 'css/syntax/tokenizer_chunks.c',
  include_directories : config_dir,
  dependencies : lexbor
)

executable('tokenizer_parse_file', 'css/syntax/tokenizer_parse_file.c',
  include_directories : config_dir,
  dependencies : lexbor
)

# HTML

executable('document_parse', 'html/document_parse.c',
  include_directories : config_dir,
  dependencies : lexbor
)

executable('document_parse_chunk', 'html/document_parse_chunk.c',
  include_directories : config_dir,
  dependencies : lexbor
)

executable('document_title', 'html/document_title.c',
  include_directories : config_dir,
  dependencies : lexbor
)

executable('element_attributes', 'html/element_attributes.c',
  include_directories : config_dir,
  dependencies : lexbor
)

executable('element_create', 'html/element_create.c',
  include_directories : config_dir,
  dependencies : lexbor
)

executable('element_innerHTML', 'html/element_innerHTML.c',
  include_directories : config_dir,
  dependencies : lexbor
)

executable('elements_by_attr', 'html/elements_by_attr.c',
  include_directories : config_dir,
  dependencies : lexbor
)

executable('elements_by_class_name', 'html/elements_by_class_name.c',
  include_directories : config_dir,
  dependencies : lexbor
)

executable('elements_by_tag_name', 'html/elements_by_tag_name.c',
  include_directories : config_dir,
  dependencies : lexbor
)

executable('html2sexpr', 'html/html2sexpr.c',
  include_directories : config_dir,
  dependencies : lexbor
)

executable('parse_chunk', 'html/parse_chunk.c',
  include_directories : config_dir,
  dependencies : lexbor
)
